start/end parameters for GET /jobs
